Fix thumbnail preview modal styling
the thumbnail would be slightly clipped vertically

now it resizes properly

i love css

--- a/dearrow-browser-frontend/index.scss
+++ b/dearrow-browser-frontend/index.scss
@@ -268,15 +268,15 @@ body {
 }
 
 #thumbnail-modal {
-  @extend %flex-column;
-  justify-content: stretch;
-  align-items: stretch;
+  @extend %flex-column, %flex-center;
   text-align: center;
   overflow: hidden;
   max-height: 100%;
 
   .thumbnail {
     flex-grow: 1;
+    flex-shrink: 1;
+    min-height: 0;
   }
 
   h2, h3 {
